--- a/HydroColor/Views/LibraryView.xaml
+++ b/HydroColor/Views/LibraryView.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:viewmodels="clr-namespace:HydroColor.ViewModels"
+             xmlns:strings="clr-namespace:HydroColor.Resources.Strings"
              x:Class="HydroColor.Views.LibraryView"
              Shell.NavBarIsVisible="False"
              Title="">
@@ -29,7 +30,7 @@
                 Command="{Binding EditListCommand}"/>
 
         <Button Grid.Row="0" 
-                Text="Email Data File..." 
+                Text="{x:Static strings:Strings.Library_EmailDataFileButton}" 
                 HorizontalOptions="End" 
                 FontSize="12"
                 Margin="5"
@@ -57,7 +58,7 @@
                             <Image Grid.Column="0" Grid.RowSpan="2" Source="{Binding WaterImageURI}"/>
                             <Label Grid.Column="1" Grid.Row="0" Text="{Binding MeasurementName}" TextColor="White" FontSize="18"/>
                             <Label Grid.Column="1" Grid.Row="1" Text="{Binding LocalTimestamp}" TextColor="White" FontSize="16"/>
-                            <Button Text="Delete" 
+                            <Button Text="{x:Static strings:Strings.Library_DeleteButton}" 
                                     FontSize="18"
                                     FontAttributes="Bold"
                                     Grid.Column="1" 
@@ -84,7 +85,7 @@
             </ListView.ItemTemplate>
         </ListView>
 
-        <Label Text="No Measurements to Display" 
+        <Label Text="{x:Static strings:Strings.Library_NoMeasurements}" 
                Grid.Row="1"
                HorizontalOptions="Center"
                Margin="20"
@@ -92,7 +93,7 @@
                IsVisible="{Binding MeasurementsExist, Converter={StaticResource InvertedBoolConverter}}"/>
 
         <Label 
-            Text="Missing Measurements?"
+            Text="{x:Static strings:Strings.Library_MissingMeasurementsLink}"
             VerticalOptions="End" 
             HorizontalOptions="Center" 
             Grid.Row="2"
