--- a/HydroColor/Views/DataView.xaml
+++ b/HydroColor/Views/DataView.xaml
@@ -45,7 +45,8 @@
             VerticalOptions="End"
             />
 
-        <Grid Grid.Row="1" Grid.ColumnSpan="3" ColumnDefinitions="auto,*,*,*" RowDefinitions="*, auto" HeightRequest="{Binding BarChartHeight}" Margin="0,10,10,0">
+        <Grid Grid.Row="1" Grid.ColumnSpan="3" ColumnDefinitions="40,*,*,*" RowDefinitions="*, auto" HeightRequest="{Binding BarChartHeight}" Margin="0,10,10,0">
+
             <Label Grid.Row="0" 
                    Grid.Column="0" 
                    Text="{x:Static strings:Strings.Data_ReflectanceGraphYAxisLabel}" 
@@ -53,16 +54,18 @@
                    FontSize="18" 
                    VerticalTextAlignment="Center" 
                    HorizontalOptions="Center"
-                   Margin="-20"/>
+                   Margin="-35,0,-35,0">
+            </Label>
+
 
             <BoxView CornerRadius="5" 
-                    Grid.Row="0" 
-                    Grid.Column="1" 
-                    Color="RoyalBlue" 
-                    HeightRequest="{Binding BlueBarChartHeight}" 
-                    WidthRequest="75" 
-                    Margin="5,0,5,0" 
-                    VerticalOptions="End"/>
+                     Grid.Row="0" 
+                     Grid.Column="1" 
+                     Color="RoyalBlue" 
+                     HeightRequest="{Binding BlueBarChartHeight}" 
+                     WidthRequest="75" 
+                     Margin="5,0,5,0" 
+                     VerticalOptions="End"/>
             <BoxView CornerRadius="5" 
                      Grid.Row="0" 
                      Grid.Column="2" 
