--- a/HydroColor/Views/WelcomeView.xaml
+++ b/HydroColor/Views/WelcomeView.xaml
@@ -78,18 +78,24 @@
         </CarouselView>
         <Grid Grid.Row="1" Padding="5">
 
+            <BoxView             
+            Color="DarkGray"
+            HeightRequest="1"
+            VerticalOptions="Start"
+            />
+
             <Button Text="{x:Static strings:Strings.Welcome_BackButton}"
                     Command="{Binding BackButtonClickCommand}"
                     IsVisible="{Binding BackButtonVisible}"
                     HorizontalOptions="Start"
-                    WidthRequest="75"/>
+                    WidthRequest="75" Margin="0,10,0,0"/>
 
             <Button Text="{Binding NextButtonText}" 
                     Command="{Binding NextButtonClickCommand}"
                     HorizontalOptions="End"
-                    WidthRequest="75"/>
+                    WidthRequest="75" Margin="0,10,0,0"/>
 
-            <VerticalStackLayout HorizontalOptions="Center">
+            <VerticalStackLayout HorizontalOptions="Center" Margin="0,10,0,0">
                 <IndicatorView x:Name="CarouselIndicator" 
                            IndicatorsShape="Circle"
                            IndicatorSize="12"
